# SH_Triangulator

./: CMakeLists.txt  LICENSE  README.md  example.cc
include/: triangulate.hpp
